--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "twilio": "~3.64.0"
+    "twilio": "~3.64.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "eslint": "^7.29.0",
